Deleted .tar files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,18 @@
-version: '3.9'
+version: '3.8'
 services:
-  jupyter:
-    image: jupyter/minimal-notebook:ubuntu-18.04
-    container_name: my_jupyter_from_compose
-    networks: 
-      - my_network_from_compose
-    volumes:
-      - .:/home/jovyan/work
-    ports: 
-      - target: 8888
-        published: 4444
-        protocol: tcp
-        mode: host
-    environment:
-      JUPYTER_TOKEN: 'hello'
-  elasticsearch:
-    image: elasticsearch:7.2.0
-    container_name: my_es_from_compose
-    networks: 
-      - my_network_from_compose
-    ports: 
-      - "9200:9200"
-      - "9300:9300"
-    environment:
-      discovery.type: single-node
-networks:
-  my_network_from_compose:
+  fastapi:
+    image: datascientest/fastapi:1.0.0
+    ports:
+      - "8000:8000"
+  authentication:
+    image: authent_image:latest
+    ports:
+      - "5000:5000"
+  authorization:
+    image: author_image:latest
+    ports:
+      - "6000:6000"
+  content:
+    image: content_image:latest
+    ports:
+      - "7000:7000"
